Set EnableDefaultCompileItems to true

--- a/Game1/Game1.fsproj
+++ b/Game1/Game1.fsproj
@@ -3,15 +3,11 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="Content\Content.mgcb" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Include="Game1.fs" />
-    <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
